Loading data and checking of Nulls

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -6,21 +6,187 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing libraries required for this project\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import Ridge"
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.model_selection import KFold, cross_val_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ship_id</th>\n",
+       "      <th>ship_type</th>\n",
+       "      <th>route_id</th>\n",
+       "      <th>month</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>fuel_consumption</th>\n",
+       "      <th>CO2_emissions</th>\n",
+       "      <th>weather_conditions</th>\n",
+       "      <th>engine_efficiency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NG001</td>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Warri-Bonny</td>\n",
+       "      <td>January</td>\n",
+       "      <td>132.26</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>3779.77</td>\n",
+       "      <td>10625.76</td>\n",
+       "      <td>Stormy</td>\n",
+       "      <td>92.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NG001</td>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Port Harcourt-Lagos</td>\n",
+       "      <td>February</td>\n",
+       "      <td>128.52</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>4461.44</td>\n",
+       "      <td>12779.73</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>92.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NG001</td>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Port Harcourt-Lagos</td>\n",
+       "      <td>March</td>\n",
+       "      <td>67.30</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>1867.73</td>\n",
+       "      <td>5353.01</td>\n",
+       "      <td>Calm</td>\n",
+       "      <td>87.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NG001</td>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Port Harcourt-Lagos</td>\n",
+       "      <td>April</td>\n",
+       "      <td>71.68</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>2393.51</td>\n",
+       "      <td>6506.52</td>\n",
+       "      <td>Stormy</td>\n",
+       "      <td>87.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NG001</td>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Lagos-Apapa</td>\n",
+       "      <td>May</td>\n",
+       "      <td>134.32</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>4267.19</td>\n",
+       "      <td>11617.03</td>\n",
+       "      <td>Calm</td>\n",
+       "      <td>85.61</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ship_id         ship_type             route_id     month  distance  \\\n",
+       "0   NG001  Oil Service Boat          Warri-Bonny   January    132.26   \n",
+       "1   NG001  Oil Service Boat  Port Harcourt-Lagos  February    128.52   \n",
+       "2   NG001  Oil Service Boat  Port Harcourt-Lagos     March     67.30   \n",
+       "3   NG001  Oil Service Boat  Port Harcourt-Lagos     April     71.68   \n",
+       "4   NG001  Oil Service Boat          Lagos-Apapa       May    134.32   \n",
+       "\n",
+       "  fuel_type  fuel_consumption  CO2_emissions weather_conditions  \\\n",
+       "0       HFO           3779.77       10625.76             Stormy   \n",
+       "1       HFO           4461.44       12779.73           Moderate   \n",
+       "2       HFO           1867.73        5353.01               Calm   \n",
+       "3    Diesel           2393.51        6506.52             Stormy   \n",
+       "4       HFO           4267.19       11617.03               Calm   \n",
+       "\n",
+       "   engine_efficiency  \n",
+       "0              92.14  \n",
+       "1              92.98  \n",
+       "2              87.61  \n",
+       "3              87.42  \n",
+       "4              85.61  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Load data from csv file to a data frame\n",
+    "ship_fuel_df = pd.read_csv(\"ship_fuel_efficiency.csv\")\n",
+    "#print out the first 5 rows and all the columns\n",
+    "ship_fuel_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ship_id               0\n",
+      "ship_type             0\n",
+      "route_id              0\n",
+      "month                 0\n",
+      "distance              0\n",
+      "fuel_type             0\n",
+      "fuel_consumption      0\n",
+      "CO2_emissions         0\n",
+      "weather_conditions    0\n",
+      "engine_efficiency     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Check for Nulls\n",
+    "print(pd.isnull(ship_fuel_df).sum())"
+   ]
   }
  ],
  "metadata": {
