Data cleaning and one hot encoding

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4              85.61  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +186,147 @@
    "source": [
     "#Check for Nulls\n",
     "print(pd.isnull(ship_fuel_df).sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ship_type</th>\n",
+       "      <th>route_id</th>\n",
+       "      <th>month</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>fuel_consumption</th>\n",
+       "      <th>CO2_emissions</th>\n",
+       "      <th>weather_conditions</th>\n",
+       "      <th>engine_efficiency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Warri-Bonny</td>\n",
+       "      <td>January</td>\n",
+       "      <td>132.26</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>3779.77</td>\n",
+       "      <td>10625.76</td>\n",
+       "      <td>Stormy</td>\n",
+       "      <td>92.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Port Harcourt-Lagos</td>\n",
+       "      <td>February</td>\n",
+       "      <td>128.52</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>4461.44</td>\n",
+       "      <td>12779.73</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>92.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Port Harcourt-Lagos</td>\n",
+       "      <td>March</td>\n",
+       "      <td>67.30</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>1867.73</td>\n",
+       "      <td>5353.01</td>\n",
+       "      <td>Calm</td>\n",
+       "      <td>87.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Port Harcourt-Lagos</td>\n",
+       "      <td>April</td>\n",
+       "      <td>71.68</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>2393.51</td>\n",
+       "      <td>6506.52</td>\n",
+       "      <td>Stormy</td>\n",
+       "      <td>87.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Oil Service Boat</td>\n",
+       "      <td>Lagos-Apapa</td>\n",
+       "      <td>May</td>\n",
+       "      <td>134.32</td>\n",
+       "      <td>HFO</td>\n",
+       "      <td>4267.19</td>\n",
+       "      <td>11617.03</td>\n",
+       "      <td>Calm</td>\n",
+       "      <td>85.61</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ship_type             route_id     month  distance fuel_type  \\\n",
+       "0  Oil Service Boat          Warri-Bonny   January    132.26       HFO   \n",
+       "1  Oil Service Boat  Port Harcourt-Lagos  February    128.52       HFO   \n",
+       "2  Oil Service Boat  Port Harcourt-Lagos     March     67.30       HFO   \n",
+       "3  Oil Service Boat  Port Harcourt-Lagos     April     71.68    Diesel   \n",
+       "4  Oil Service Boat          Lagos-Apapa       May    134.32       HFO   \n",
+       "\n",
+       "   fuel_consumption  CO2_emissions weather_conditions  engine_efficiency  \n",
+       "0           3779.77       10625.76             Stormy              92.14  \n",
+       "1           4461.44       12779.73           Moderate              92.98  \n",
+       "2           1867.73        5353.01               Calm              87.61  \n",
+       "3           2393.51        6506.52             Stormy              87.42  \n",
+       "4           4267.19       11617.03               Calm              85.61  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Data Cleaning\n",
+    "#Dropping ship_id since this is not required for the data analysis of this project\n",
+    "ship_fuel_df = ship_fuel_df.drop(columns=['ship_id'])\n",
+    "ship_fuel_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#One hot encoding for categorial variables (ship_type, route_id, month, fuel_type, weather_conditions)\n",
+    "catcolumn = ['ship_type','route_id', 'month', 'fuel_type', 'weather_conditions']\n",
+    "ship_fuel_encode_df = pd.get_dummies(ship_fuel_df, columns=catcolumn)"
    ]
   }
  ],
