Scaling and One hot encoding

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,8 @@
     "import pandas as pd\n",
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +150,7 @@
        "4              85.61  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +308,7 @@
        "4           4267.19       11617.03               Calm              85.61  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,13 +322,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "#One hot encoding for categorial variables (ship_type, route_id, month, fuel_type, weather_conditions)\n",
+    "#Scaling for numerical variables\n",
+    "\n",
+    "#Make a list for each variable type (Categorical and Numerical)\n",
     "catcolumn = ['ship_type','route_id', 'month', 'fuel_type', 'weather_conditions']\n",
-    "ship_fuel_encode_df = pd.get_dummies(ship_fuel_df, columns=catcolumn)"
+    "numcolumn = ['distance', 'fuel_consumption', 'CO2_emissions', 'engine_efficiency']\n",
+    "\n",
+    "#Creation of a column tranformer to scale numerical values and one hot endode the categorial values\n",
+    "processor = ColumnTransformer(transformers=[(\"num\", MinMaxScaler(), numcolumn), ('cat', OneHotEncoder(), catcolumn)])\n",
+    "\n",
+    "#Using the transformer to apply scaling and one hot encoding in one shot (the type changes to numpy from pandas df)\n",
+    "ship_fuel_processed_np = processor.fit_transform(ship_fuel_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
