Splitting data into training and testing sets

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,19 +334,72 @@
     "numcolumn = ['distance', 'fuel_consumption', 'CO2_emissions', 'engine_efficiency']\n",
     "\n",
     "#Creation of a column tranformer to scale numerical values and one hot endode the categorial values\n",
-    "processor = ColumnTransformer(transformers=[(\"num\", MinMaxScaler(), numcolumn), ('cat', OneHotEncoder(), catcolumn)])\n",
+    "processor = ColumnTransformer(transformers=[(\"num\", StandardScaler(), numcolumn), ('cat', OneHotEncoder(), catcolumn)])\n",
     "\n",
     "#Using the transformer to apply scaling and one hot encoding in one shot (the type changes to numpy from pandas df)\n",
-    "ship_fuel_processed_np = processor.fit_transform(ship_fuel_df)"
+    "ship_fuel_processed_np = processor.fit_transform(ship_fuel_df)\n",
+    "\n",
+    "#Getting columns's names (Changes the features's names)\n",
+    "features = processor.get_feature_names_out() \n",
+    "\n",
+    "#Converting back to pandas df from numpy\n",
+    "ship_fuel_processed_df = pd.DataFrame(ship_fuel_processed_np, columns=features)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['num__distance', 'num__fuel_consumption', 'num__CO2_emissions',\n",
+      "       'num__engine_efficiency', 'cat__ship_type_Fishing Trawler',\n",
+      "       'cat__ship_type_Oil Service Boat', 'cat__ship_type_Surfer Boat',\n",
+      "       'cat__ship_type_Tanker Ship', 'cat__route_id_Escravos-Lagos',\n",
+      "       'cat__route_id_Lagos-Apapa', 'cat__route_id_Port Harcourt-Lagos',\n",
+      "       'cat__route_id_Warri-Bonny', 'cat__month_April', 'cat__month_August',\n",
+      "       'cat__month_December', 'cat__month_February', 'cat__month_January',\n",
+      "       'cat__month_July', 'cat__month_June', 'cat__month_March',\n",
+      "       'cat__month_May', 'cat__month_November', 'cat__month_October',\n",
+      "       'cat__month_September', 'cat__fuel_type_Diesel', 'cat__fuel_type_HFO',\n",
+      "       'cat__weather_conditions_Calm', 'cat__weather_conditions_Moderate',\n",
+      "       'cat__weather_conditions_Stormy'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "#Print out the features' names since changes are expected\n",
+    "print(ship_fuel_processed_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X_train:  (1008, 28)\n",
+      "Shape of X_test:  (432, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Split data into training and test set (7:3)\n",
+    "#Separate the data into inputs (X) and output (y) \n",
+    "X = ship_fuel_processed_df.drop('num__CO2_emissions', axis=1)\n",
+    "y = ship_fuel_processed_df['num__CO2_emissions']\n",
+    "\n",
+    "#Split the data into train and test set (7:3)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "print(\"Shape of X_train: \", X_train.shape)\n",
+    "print(\"Shape of X_test: \", X_test.shape)"
    ]
   }
  ],
