--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.model_selection import KFold, cross_val_score"
    ]
@@ -400,6 +401,44 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "print(\"Shape of X_train: \", X_train.shape)\n",
     "print(\"Shape of X_test: \", X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r2: 0.9950588226958281, mse: 0.005196433188175669, mae: 0.04492861097840247\n",
+      "Model Coeff: [ 4.33945257e-03  9.94377873e-01  3.55546094e-03  1.46396095e-03\n",
+      " -2.15989526e-03  2.48454017e-03 -1.78860586e-03  4.17292083e-03\n",
+      " -4.03668540e-03 -5.94416434e-03  5.80792890e-03  4.44951290e-04\n",
+      "  1.34670571e-04  2.08488355e-03  6.73251737e-03  7.81170065e-03\n",
+      " -4.23708020e-03 -5.96126698e-03  1.93685551e-03  9.12261910e-03\n",
+      " -6.22728102e-03 -8.02348759e-03 -3.81908226e-03 -2.61596685e-03\n",
+      "  2.61596685e-03  2.19277946e-03 -2.59127998e-03  3.98500519e-04]\n",
+      "Model Intercept: 0.0006629829546923281\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Linear Regression\n",
+    "LinearModel = LinearRegression()\n",
+    "LinearModel.fit(X_train, y_train)\n",
+    "y_pred = LinearModel.predict(X_test)\n",
+    "\n",
+    "#Calculation of R^2, MSE, MAE\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "print(f\"r2: {r2}, mse: {mse}, mae: {mae}\")\n",
+    "\n",
+    "print(f\"Model Coeff: {LinearModel.coef_}\")\n",
+    "print(f\"Model Intercept: {LinearModel.intercept_}\")"
    ]
   }
  ],
