Addition of Ridge Regression

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler, OneHotEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4              85.61  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "4           4267.19       11617.03               Calm              85.61  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
     "numcolumn = ['distance', 'fuel_consumption', 'CO2_emissions', 'engine_efficiency']\n",
     "\n",
     "#Creation of a column tranformer to scale numerical values and one hot endode the categorial values\n",
-    "processor = ColumnTransformer(transformers=[(\"num\", StandardScaler(), numcolumn), ('cat', OneHotEncoder(), catcolumn)])\n",
+    "processor = ColumnTransformer(transformers=[(\"num\", MinMaxScaler(), numcolumn), ('cat', OneHotEncoder(), catcolumn)])\n",
     "\n",
     "#Using the transformer to apply scaling and one hot encoding in one shot (the type changes to numpy from pandas df)\n",
     "ship_fuel_processed_np = processor.fit_transform(ship_fuel_df)\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -405,22 +405,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r2: 0.9950588226958281, mse: 0.005196433188175669, mae: 0.04492861097840247\n",
-      "Model Coeff: [ 4.33945257e-03  9.94377873e-01  3.55546094e-03  1.46396095e-03\n",
-      " -2.15989526e-03  2.48454017e-03 -1.78860586e-03  4.17292083e-03\n",
-      " -4.03668540e-03 -5.94416434e-03  5.80792890e-03  4.44951290e-04\n",
-      "  1.34670571e-04  2.08488355e-03  6.73251737e-03  7.81170065e-03\n",
-      " -4.23708020e-03 -5.96126698e-03  1.93685551e-03  9.12261910e-03\n",
-      " -6.22728102e-03 -8.02348759e-03 -3.81908226e-03 -2.61596685e-03\n",
-      "  2.61596685e-03  2.19277946e-03 -2.59127998e-03  3.98500519e-04]\n",
-      "Model Intercept: 0.0006629829546923281\n"
+      "r2: 0.9950584120718421, mse: 0.0001882833256569185, mae: 0.008554467357227398\n",
+      "Model Coeff: [ 3.47406485e-03  9.44906219e-01  2.33746679e-03  2.54872669e+10\n",
+      "  2.54872669e+10  2.54872669e+10  2.54872669e+10 -2.34918162e+10\n",
+      " -2.34918162e+10 -2.34918162e+10 -2.34918162e+10  3.40923932e+09\n",
+      "  3.40923932e+09  3.40923932e+09  3.40923932e+09  3.40923932e+09\n",
+      "  3.40923932e+09  3.40923932e+09  3.40923932e+09  3.40923932e+09\n",
+      "  3.40923932e+09  3.40923932e+09  3.40923932e+09  6.70501465e+10\n",
+      "  6.70501465e+10  2.91924349e+10  2.91924349e+10  2.91924349e+10]\n",
+      "Model Intercept: -101647271462.74316\n"
      ]
     }
    ],
@@ -431,14 +431,53 @@
     "y_pred = LinearModel.predict(X_test)\n",
     "\n",
     "#Calculation of R^2, MSE, MAE\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
+    "Lr2 = r2_score(y_test, y_pred)\n",
+    "Lmse = mean_squared_error(y_test, y_pred)\n",
+    "Lmae = mean_absolute_error(y_test, y_pred)\n",
     "\n",
-    "print(f\"r2: {r2}, mse: {mse}, mae: {mae}\")\n",
+    "print(f\"r2: {Lr2}, mse: {Lmse}, mae: {Lmae}\")\n",
     "\n",
     "print(f\"Model Coeff: {LinearModel.coef_}\")\n",
     "print(f\"Model Intercept: {LinearModel.intercept_}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best alpha:  0.001\n",
+      "Performance for best alpha:  {'R2': 0.9950587106126876, 'MSE': 0.0001882719507175171, 'MAE': 0.008553072179849838}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Generatng alpha from 0 to 10 in steps of 0.001\n",
+    "alpha = np.arange(0,10.001,0.001)\n",
+    "alpha = alpha.tolist()\n",
+    "results = {}\n",
+    "#for loop to test out all the alpha values to find the best value\n",
+    "for a in alpha:\n",
+    "    #Ridge Regression\n",
+    "    RidgeModel = Ridge(alpha=a)\n",
+    "    RidgeModel.fit(X_train, y_train)\n",
+    "    y_pred = RidgeModel.predict(X_test)\n",
+    "\n",
+    "    #Calculation of R^2, MSE, MAE\n",
+    "    Rr2 = r2_score(y_test, y_pred)\n",
+    "    Rmse = mean_squared_error(y_test, y_pred)\n",
+    "    Rmae = mean_absolute_error(y_test, y_pred)\n",
+    "\n",
+    "    results[a] = {'R2': Rr2, 'MSE': Rmse, 'MAE': Rmae}\n",
+    "\n",
+    "#Output the best performing alpha and its performance matrics \n",
+    "best_alpha_val = max(results, key=lambda a: results[a]['R2'])\n",
+    "print(\"Best alpha: \", best_alpha_val)\n",
+    "print(\"Performance for best alpha: \", results[best_alpha_val])"
    ]
   }
  ],
