--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.model_selection import KFold, cross_val_score"
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "4              85.61  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
        "4           4267.19       11617.03               Calm              85.61  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,104 +324,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "#One hot encoding for categorial variables (ship_type, route_id, month, fuel_type, weather_conditions)\n",
     "#Scaling for numerical variables\n",
+    "#Separate the data into inputs (X) and output (y) \n",
+    "X = ship_fuel_df.drop('CO2_emissions', axis=1)\n",
+    "y = ship_fuel_df['CO2_emissions']\n",
     "\n",
     "#Make a list for each variable type (Categorical and Numerical)\n",
     "catcolumn = ['ship_type','route_id', 'month', 'fuel_type', 'weather_conditions']\n",
-    "numcolumn = ['distance', 'fuel_consumption', 'CO2_emissions', 'engine_efficiency']\n",
+    "numcolumn = ['distance', 'fuel_consumption', 'engine_efficiency']\n",
     "\n",
     "#Creation of a column tranformer to scale numerical values and one hot endode the categorial values\n",
-    "processor = ColumnTransformer(transformers=[(\"num\", MinMaxScaler(), numcolumn), ('cat', OneHotEncoder(), catcolumn)])\n",
+    "transformer = ColumnTransformer(transformers=[(\"num\", MinMaxScaler(), numcolumn), ('cat', OneHotEncoder(drop='first',sparse_output=False), catcolumn)])\n",
     "\n",
     "#Using the transformer to apply scaling and one hot encoding in one shot (the type changes to numpy from pandas df)\n",
-    "ship_fuel_processed_np = processor.fit_transform(ship_fuel_df)\n",
+    "X_np = transformer.fit_transform(X)\n",
     "\n",
-    "#Getting columns's names (Changes the features's names)\n",
-    "features = processor.get_feature_names_out() \n",
+    "num_cols_transformed = numcolumn\n",
     "\n",
-    "#Converting back to pandas df from numpy\n",
-    "ship_fuel_processed_df = pd.DataFrame(ship_fuel_processed_np, columns=features)"
+    "# Getting categorical feature names after one-hot encoding\n",
+    "cat_cols_transformed = transformer.named_transformers_['cat'].get_feature_names_out(catcolumn)\n",
+    "\n",
+    "# Combine both sets of columns\n",
+    "all_cols = np.concatenate([num_cols_transformed, cat_cols_transformed])\n",
+    "\n",
+    "# Convert numpy array back to DataFrame WITH column names\n",
+    "X_df = pd.DataFrame(X_np, columns=all_cols)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['num__distance', 'num__fuel_consumption', 'num__CO2_emissions',\n",
-      "       'num__engine_efficiency', 'cat__ship_type_Fishing Trawler',\n",
-      "       'cat__ship_type_Oil Service Boat', 'cat__ship_type_Surfer Boat',\n",
-      "       'cat__ship_type_Tanker Ship', 'cat__route_id_Escravos-Lagos',\n",
-      "       'cat__route_id_Lagos-Apapa', 'cat__route_id_Port Harcourt-Lagos',\n",
-      "       'cat__route_id_Warri-Bonny', 'cat__month_April', 'cat__month_August',\n",
-      "       'cat__month_December', 'cat__month_February', 'cat__month_January',\n",
-      "       'cat__month_July', 'cat__month_June', 'cat__month_March',\n",
-      "       'cat__month_May', 'cat__month_November', 'cat__month_October',\n",
-      "       'cat__month_September', 'cat__fuel_type_Diesel', 'cat__fuel_type_HFO',\n",
-      "       'cat__weather_conditions_Calm', 'cat__weather_conditions_Moderate',\n",
-      "       'cat__weather_conditions_Stormy'],\n",
-      "      dtype='object')\n"
+      "Shape of X_train:  (1008, 23)\n",
+      "Shape of X_test:  (432, 23)\n"
      ]
     }
    ],
    "source": [
-    "#Print out the features' names since changes are expected\n",
-    "print(ship_fuel_processed_df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of X_train:  (1008, 28)\n",
-      "Shape of X_test:  (432, 28)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Split data into training and test set (7:3)\n",
-    "#Separate the data into inputs (X) and output (y) \n",
-    "X = ship_fuel_processed_df.drop('num__CO2_emissions', axis=1)\n",
-    "y = ship_fuel_processed_df['num__CO2_emissions']\n",
-    "\n",
     "#Split the data into train and test set (7:3)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_df, y, test_size=0.3, random_state=42)\n",
     "print(\"Shape of X_train: \", X_train.shape)\n",
     "print(\"Shape of X_test: \", X_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r2: 0.9950584120718421, mse: 0.0001882833256569185, mae: 0.008554467357227398\n",
-      "Model Coeff: [ 3.47406485e-03  9.44906219e-01  2.33746679e-03  2.54872669e+10\n",
-      "  2.54872669e+10  2.54872669e+10  2.54872669e+10 -2.34918162e+10\n",
-      " -2.34918162e+10 -2.34918162e+10 -2.34918162e+10  3.40923932e+09\n",
-      "  3.40923932e+09  3.40923932e+09  3.40923932e+09  3.40923932e+09\n",
-      "  3.40923932e+09  3.40923932e+09  3.40923932e+09  3.40923932e+09\n",
-      "  3.40923932e+09  3.40923932e+09  3.40923932e+09  6.70501465e+10\n",
-      "  6.70501465e+10  2.91924349e+10  2.91924349e+10  2.91924349e+10]\n",
-      "Model Intercept: -101647271462.74316\n"
+      "r2: 0.9950588226958281, mse: 955901.0104059286, mae: 609.3639790767888\n"
      ]
     }
    ],
@@ -435,23 +401,20 @@
     "Lmse = mean_squared_error(y_test, y_pred)\n",
     "Lmae = mean_absolute_error(y_test, y_pred)\n",
     "\n",
-    "print(f\"r2: {Lr2}, mse: {Lmse}, mae: {Lmae}\")\n",
-    "\n",
-    "print(f\"Model Coeff: {LinearModel.coef_}\")\n",
-    "print(f\"Model Intercept: {LinearModel.intercept_}\")"
+    "print(f\"r2: {Lr2}, mse: {Lmse}, mae: {Lmae}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best alpha:  0.001\n",
-      "Performance for best alpha:  {'R2': 0.9950587106126876, 'MSE': 0.0001882719507175171, 'MAE': 0.008553072179849838}\n"
+      "Best alpha:  0.0\n",
+      "Performance for best alpha:  {'R2': 0.9950588226958281, 'MSE': 955901.0104059273, 'MAE': 609.3639790767875}\n"
      ]
     }
    ],
