addition of kFold cross validation

--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -789,6 +789,39 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression CV R² scores: [0.99497629 0.99455004 0.9944108  0.99468615 0.99307483]\n",
+      "Mean CV R² (Linear Regression): 0.9943396227097873\n",
+      "Ridge Regression (alpha=0.001) CV R² scores: [0.99497629 0.99455004 0.9944108  0.99468616 0.99307483]\n",
+      "Mean CV R² (Ridge Regression): 0.9943396241298735\n"
+     ]
+    }
+   ],
+   "source": [
+    "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Using cross_val_score with r² as the metric\n",
+    "lr_scores = cross_val_score(LinearModel, df_encoded, y, cv=kf, scoring='r2')\n",
+    "print(\"Linear Regression CV R² scores:\", lr_scores)\n",
+    "print(\"Mean CV R² (Linear Regression):\", lr_scores.mean())\n",
+    "\n",
+    "# --- Ridge Regression Evaluation ---\n",
+    "# You can experiment with different alpha values.\n",
+    "ridge_alpha = 0.001\n",
+    "RidgeModel = Ridge(alpha=ridge_alpha)\n",
+    "ridge_scores = cross_val_score(RidgeModel, df_encoded, y, cv=kf, scoring='r2')\n",
+    "print(f\"Ridge Regression (alpha={ridge_alpha}) CV R² scores:\", ridge_scores)\n",
+    "print(f\"Mean CV R² (Ridge Regression):\", ridge_scores.mean())"
+   ]
   }
  ],
  "metadata": {
