--- a/SC5002_Lab_Assignment2.ipynb
+++ b/SC5002_Lab_Assignment2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.model_selection import KFold, cross_val_score\n",
-    "from sklearn.pipeline import make_pipeline"
+    "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+    "from statsmodels.tools.tools import add_constant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
        "4              85.61  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +310,7 @@
        "4           4267.19       11617.03               Calm              85.61  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +693,7 @@
      "output_type": "stream",
      "text": [
       "Best alpha:  0.001\n",
-      "Performance for best alpha:  {'R²': 0.9949762298570884, 'MSE': 1043297.5455192795, 'MAE': 633.7118401829547}\n"
+      "Performance for best alpha:  {'R²': 0.9949762298570884, 'MSE': 1043297.5455192839, 'MAE': 633.7118401829564}\n"
      ]
     }
    ],
@@ -723,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
